docfix/Improve error handling at function grantAccessToViews

--- a/obp-api/src/main/resources/i18n/lift-core_es_ES.properties
+++ b/obp-api/src/main/resources/i18n/lift-core_es_ES.properties
@@ -631,7 +631,7 @@ OBP-20055 = estos parámetros de consulta':
 OBP-20056 = está desactivado para esta instancia de la API.
 OBP-20057 = no encontrado por userId.
 OBP-20058 = consumidor está deshabilitado.
-OBP-20059 = se ha podido obtener el estado de bloqueo del usuario.
+OBP-20059 = No se pudo asignar el acceso a la cuenta.
 sOBP-20060 = usuario no tiene acceso a la vista $SYSTEM_READ_ACCOUNTS_BERLIN_GROUP_VIEW_ID.
 OBP-20061 = usuario actual no tiene acceso a la vista 
 OBP-20062 = frecuencia por día debe ser mayor que 0.
